--- a/.npmignore
+++ b/.npmignore
@@ -2,14 +2,14 @@
 ### folders
 .idea
 test
-node_modules
+src
+scripts
 
 ### matching files
 *.sh
 *.txt
 *.log
 *.md
-*.ts
 *.json
 *.yml
 
@@ -18,6 +18,5 @@ node_modules
 .npmignore
 yarn.lock
 .editorconfig
+.npmrc
 
-### negation
-!*.d.ts
